--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.34",
     "antd": "^5.26.6",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "history": "^4.10.1",
     "js-cookie": "^3.0.5",
     "next": "15.4.4",
