--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
     "antd": "^5.26.6",
     "axios": "^1.11.0",
+    "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "history": "^4.10.1",
     "js-cookie": "^3.0.5",
